mac os compiled app

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 python-multipart>=0.0.6
 send2trash>=1.8.2
-duplicate-images>=1.0.0
+duplicate-images>=0.11.10
 jinja2>=3.1.2
 opencv-python>=4.8.0
+pyinstaller>=6.0.0
