--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,12 @@ MANIFEST
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
-*.spec
+*.spec.backup
+*.dmg
+AppIcon.iconset/
+
+# Release artifacts
+releases/
 
 # Installer logs
 pip-log.txt
